fix starter group generator